--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 <body>
-    <h1>Recent Documents</h1>
+    <h1>shady hello</h1>
     <p>
         Right click on the app icon to see recent documents.
         You should see `recently-used.md` added to the list of recent files
